# 36120-25SP-AT2-25677648-Experimentation

./: Makefile  README.md  github.txt  pyproject.toml  requirements.txt
36120_25sp_at2_25677648_experimentation/: __init__.py  dataset.py  features.py  plots.py
36120_25sp_at2_25677648_experimentation/modeling/: predict.py  train.py
models/precipitation_fall/: precipitation_fall.joblib
models/rain_or_not/: rain_or_not.joblib
notebooks/precipitation_fall/: .cache.sqlite  36120-25SP-AT2-25677648-experiment-1.ipynb  36120-25SP-AT2-25677648-experiment-2.ipynb  36120-25SP-AT2-25677648-experiment-3.ipynb  36120-25SP-AT2-25677648-experiment-4.ipynb  36120-25SP-AT2-25677648-experiment-5.ipynb  36120-25SP-AT2-25677648-experiment-6.ipynb  36120-25SP-AT2-25677648-experiment-7.ipynb
notebooks/rain_or_not/: 36120-25SP-AT2-25677648-experiment-1.ipynb  36120-25SP-AT2-25677648-experiment-2.ipynb  36120-25SP-AT2-25677648-experiment-3.ipynb  36120-25SP-AT2-25677648-experiment-4.ipynb  36120-25SP-AT2-25677648-experiment-5.ipynb  36120-25SP-AT2-25677648-experiment-6.ipynb  36120-25SP-AT2-25677648-experiment-7.ipynb  36120-25SP-AT2-25677648-experiment-8.ipynb
reports/rain_or_not/: 36120-25SP-AT2-25677648-experiment-8.ipynb
