[tool.poetry]
name = "Adv_MLAA_AT2"
version = "0.0.1"
description = "Assignment 2 of Advanced Machine Learning Algorithms and Applications"
authors = []

packages = [
  { include = "36120_25sp_at2_25677648_experimentation" }
]

[tool.poetry.dependencies]
python = "==3.12.4"
pip = "*"
python-dotenv = "*"
ruff = "*"
pandas = "==2.2.2"
scikit-learn = "==1.5.1"
ipykernel = ">=6.30.0,<7.0.0"
numpy = ">=2.3.2,<3.0.0"
matplotlib = ">=3.10.5,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
scipy = ">=1.11.0,<2.0.0"
xgboost = "==2.1.0"
my-krml-25677648 = { version = "2025.0.1.8", source = "testpypi" }

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
src = ["Adv_MLAA_AT2"]
include = ["pyproject.toml", "Adv_MLAA_AT2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["Adv_MLAA_AT2"]
force-sort-within-sections = true
